# byzalo

laba2/: Cargo.toml  readme.md
laba2/src/: main.rs
laba3/: Cargo.toml  readme.md
laba3/src/: main.rs
laba5/: Cargo.toml  readme.md
laba5/src/: main.rs
