[package]
name = "byzalo2"
version = "0.1.0"
edition = "2024"

[dependencies]
num-complex = "0.4.6"
rayon = "1.12.0"
rand = "0.10.1"
blas-src = { version = "0.14.0", features = ["openblas"] }
cblas-sys = "0.2"

[profile.release]
opt-level = 3          
lto = "fat"            
codegen-units = 1      
panic = "abort"        

